Updated everything to bootsrap

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,7 @@
+<div class="center hero-unit">
+    <h1>Welcome! </h1>
+    <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
+     </p>
 
-<h1>Welcome to One Month Rails</h1>
-<p>
-	you have found the homepage for the
-	<a href="http://onemonthrails.com">One Month Rails </a>
-	application
-</p>
-<p>
-	<a href="#">Sign up now!</a>
-</p>
-
-<div class="footer">
-
-	<small>
-<a href="http://onemonthrails.com">One Month Rails </a>
-by someone
-	</small>
-
+    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
 </div>
